compiler-core/src/snapshots/gleam_core__requirement__tests__read_git_dependency_with_unknown_field.snap
---
source: compiler-core/src/requirement.rs
expression: error.to_string()
---
TOML parse error at line 1, column 34
  |
1 | github = { git = "a", ref = "b", mmm = 1 }
  |                                  ^^^
unknown field `mmm`, expected one of `version`, `path`, `git`, `ref`
